...
        .navigationTitle(store.driver.fullName)
        .toolbar {
            ToolbarItem(placement: .navigationBarTrailing) {
                Button(action: {
                    store.send(.toggleFavorite)
                }) {
                    Image(systemName: store.isFavorite ? "star.fill" : "star")
                        .accessibilityIdentifier(store.isFavorite ? "star.fill" : "star")
                }
            }
        }
        .task {
            store.send(.onAppear)
...
