...
                    ErrorView(message: errorMessage)
                        .accessibilityIdentifier("error_view")
                } else {
                    driversList
                }
            }
            .navigationTitle("F1 Drivers")
        } destination: { store in
          DriverDetailView(store: store)
        }
        .searchable(text: $store.searchText.sending(\.searchTextChanged)
                    , prompt: "Search drivers")
        .task { store.send(.onAppear) }
        .onReceive(inspection.notice) { self.inspection.visit(self, $0) }

    }
    
    private var driversList: some View {
...
